--- a/index.html
+++ b/index.html
@@ -281,20 +281,24 @@
 											<i>Conservation, Connectivity, and Coexistence:
 												Understanding Corridor Efficacy in Fragmented Landscapes</i><br>
 											<ul>
-												<li>Conducted advanced spatial analyses to quantify landscape connectivity
-													across three study areas in Czechia, Idaho, and Kansas and assess corridor efficacy.</li>
-												<li>Developed scripts for spatial and statistical analyses and uniform data visualization.</li>
-												<li>Used remotely sensed data to quantify and assess the composition of configuration landscapes.</li>
-												<li>Applied best and personally developed geospatial tools and methods to address critical knowledge
+												<li>Collected, created, manipulated, and analyzed spatial data (vector and raster)
+													to produce cartographic and data products that improve land management decision-making.</li>
+												<li>Consistently executed advanced spatial analyses to quantify landscape connectivity
+													across three study areas in Czechia, Idaho, and Kansas.</li>
+											</ul>
+											<ol>
+												<li>Developed scripts to facilitate spatial and statistical analyses and uniform data visualization.</li>
+												<li>Actively integrated field data with spatial modelling to meet project objectives.</li>
+												<li>Used remotely sensed data to quantify and assess the composition and configuration of forested and
+													rangeland landscapes.</li>
+											</ol>
+											<ul>
+												<li>Applied best and personally developed spatial tools and methods to address critical knowledge
 													gaps in corridor ecology and understand the conservation value of corridors.</li>
 											</ul>
-											<ul>
-												<li>Quantified landscape connectivity using resistance-based connectivity models:
-													cost distance (ArcGIS) and current flow (<i>Circuitscape</i>.
-												<li>Assessed the degree to which the presence of corridor influences connectivity and small mammal
-												distribution when compared to isolated patches and intact reference areas composed of contigous
-												forest or rangeland habitats.</li>
-										</td>
+											<ol>
+												<li>Thoroughly maintained record of methodological approaches and troubleshooting.</li>
+											</ol>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">August 2022<br> - <br>December 2022</td>
 									</tr>
