--- a/index.html
+++ b/index.html
@@ -332,21 +332,33 @@
 											<b>Undergraduate Research</b> (CMU) <br>
 											<i>The steppingstones of dispersal in Felidae</i><br>
 											<ul>
-												<li>Manipulated open-sourced GIS data; conducted spatial analyses across geographic ranges using
-													resistance-based connectivity modelling.</li>
-												<li>Assessed the degree to which fragmentation isolated 9 big cat populations with a focus on species
-												dispersal mechanisms and steppingstones.</li>
-												<li>Managed spatial and non-spatial databases of species-specific behavior and morphology.</li>
-												<li>Used home range estimates as a proxy for dispersal distances due to insufficient data in literature.</li>
-											</ul></td>
+												<li>Extended research from a writing intensive Conservation Biology course to implement advanced
+													landscape-scale spatial analysis using ArcGIS.</li>
+											</ul>
+											<ol>
+												<li>Collected and manipulated open-sourced spatial data (raster and vector);
+													managed spatial and non-spatial databases.</li>
+												<li>Used Model Builder to consistently facilitate spatial processes across nine landscapes.</li>
+											</ol>
+											<ul>
+												<li>Independently conducted spatial and statistical analyses to assess the influence
+												human land uses has on nine endangered, vulnerable, and near-threatened cat populations</li>
+												<li>Reviewed pertinent literature to collect species-specific dispersal data;
+													applied home range estimates as a proxy for dispersal.</li>
+											</ul>
+										</td>
 										<td style="text-align: center; vertical-align: middle;">August 2019<br> - <br>August 2020</td>
 									</tr>
 									</tr>
 									<td><b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
 										<i>Mice DNA Barcoding</i><br>
-										<ul><li>Designed and presented a poster at the MMC 3rd Annual Student Showcase.</li>
+										<ul>
+											<li>Designed and presented a poster at the MMC 3rd Annual Student Showcase.</li>
+										</ul>
+										<ol>
 											<li>Received Student Showcase Award.</li>
-											<li>Extracted tissue samples, PCR, and gel electrophoresis; sent out for sequencing.</li>
+										</ol>
+										<ul>											<li>Extracted tissue samples, PCR, and gel electrophoresis; sent out for sequencing.</li>
 											<li>Compared and aligned sequences among taxa; inferred evolutionary relationships.</li>
 											<li>Utilized DNA Subway, a bioinformatics pipeline, for DNA barcoding and phylogenetics.</li>
 										</ul></td>
