--- a/index.html
+++ b/index.html
@@ -365,9 +365,12 @@
 									<td style="text-align: center; vertical-align: middle;">April 2018</td>
 									<tr>
 										<td><i>The effect different concentrations of NaCl has on plant root peroxidase</i><br>
-											<ul><li>Extracted tissue samples, PCR, and gel electrophoresis, measured gene expression.</li>
-												<li>Planted seeds in a growth chamber to measure the effect of various NaCl concentrations.</li>
-											</ul></td>
+											<ul>
+												<li>Extracted tissue samples, PCR, and gel electrophoresis, measured gene expression.</li>
+												<li>Planted seeds in a growth chamber to measure the effect various NaCl concentrations
+													has on plant roots.</li>
+											</ul>
+										</td>
 										<td style="text-align: center; vertical-align: middle;">December 2017</td>
 									</tr>
 									</tr>
