--- a/index.html
+++ b/index.html
@@ -306,11 +306,11 @@
 										<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
 										<i>Tiger (<i>Panthera tigris</i>) endangerment: Positive responses to tiger conservation efforts</i>
 										<ul>
+											<li>Debugged scripts for statistical analyses; promptly shared with colleagues.</li>
 											<li>Produced a publishable unit (in progress) from an assignment in a graduate Conservation Biology course.</li>
-											<li>Assessed the influence varying levels of disturbance has on viability of 3 tiger populations.</li>
-											<li>Debugged scripts for statistical analyses; shared with colleagues during the course.</li>
-											<li>Collected demographic data; managed a non-spatial database in a collaborative workspace environment.</li>
-											<li>Conducted population viability analysis; developed life stage diagrams; Leslie matrix projection models.</li>
+											<li>Reviewed pertinent literature to collect species demographic data for statistical analyses.</li>
+											<li>Managed a non-spatial database in a collaborative workspace environment.</li>
+											<li>Assessed the influence varying levels of human disturbance has on viability of 3 tiger populations.</li>
 										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
@@ -319,11 +319,12 @@
 										<td>
 											<i>A Pythonic tool to locate high-priority conservation areas through mining BBS: Sage-grouse as an umbrella species</i><br>
 											<ul>
-												<li>Optimized >2,400 data points; developed scripts for statistical analyses and uniform data visualization.</li>
-												<li>Helped land managers and conservationists better plan to protect Greater-sage grouse as an umbrella
+												<li>Optimized >2,400 spatial data points; developed scripts for statistical analyses and uniform data visualization.</li>
+												<li>Managed a non-spatial database in a collaborative workspace environment.</li>
+												<li>Investigated the influence managed greater sage-grouse (GSG) areas has on metrics of avian diversity over time.</li>
+												<li>Helped land managers and conservationists better plan to protect GSG as an umbrella
 													species and manage healthy rangeland habitat to protect avian biodiversity long-term.</li>
-												<li> Managed a non-spatial database in a collaborative workspace environment.</li>
-												<li>Investigated the influence managed GSG areas has on bird diversity over time.</li></ul>
+											</ul>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
 									</tr>
