--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 										<b>Research Assistant</b> (UNT)<br>
 										<i>Global Corridor Efficacy Project</i> • <i><a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i><br>
 										<ul>
+											<li>Provided spatial modelling support for the project in conjunction with field data and genetic analysis.</li>
 											<li>Collected, created, manipulated, analyzed, and managed >2 TB of spatial data to support an international research collaboration.</li>
 											<li>Organized and prepared presentations to update project team; implemented feedback to meet multi-user objectives.</li>
 											<li>Designed a workflow for project collaborators to implement spatial processing across 11+ landscapes, internationally.</li>
@@ -208,7 +209,8 @@
 									<tr>
 										<td>
 											<ul>
-												<li>Optimized >4,500 GPS points; integrated with landscape-scale spatial analyses.</li>
+												<li>Provided spatial modelling support for the project in conjunction with field data and genetic analysis.</li>
+												<li>Optimized >4,500 GPS points; integrated with landscape-scale spatial analysis.</li>
 												<li>Analyzed imagery and digitized landscape elements using biologically relevant remotely sensed data.</li>
 												<li>Assessed current GIS technologies; applied best and developed new geospatial processes
 												for conservation objectives.
@@ -288,7 +290,8 @@
 											</ul>
 											<ol>
 												<li>Developed scripts to facilitate spatial and statistical analyses and uniform data visualization.</li>
-												<li>Actively integrated field data with spatial modelling to meet project objectives.</li>
+												<li>Actively integrated field data with spatial modelling to answer research questions.</li>
+												<li>Implemented metrics of gene flow to strengthen spatial models/statistical analyses and interpret results.</li>
 												<li>Used remotely sensed data to quantify and assess the composition and configuration of forested and
 													rangeland landscapes.</li>
 											</ol>
