--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 							</dd>
 							<dt>Field Skills</dt>
 							<dd>
-								<p>GPS Data Collection, Timber Cruise,
-									Small Mammal Trapping and Handling, Mist Netting, Bird Handling,
+								<p>GPS, Timber Cruise,
+									Small Mammal Trapping and Handling, Mist Netting, Avian Handling,
 									Radio Telemetry, Acoustic Monitoring, Camera Trapping,
 									Remote Fieldwork, Integration with GIS</p>
 							</dd>
