--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 											Malaria as part of long-term research of complex socio-ecological issues in the content of global climate change.</li>
 											</ul>
 											<ol>
-												<li>Collected GPA data, mist netted, live handled and identified avians, collected avian morphometric data and
+												<li>Collected GPS data, mist netted, live handled and identified avians, collected avian morphometric data and
 													blood samples; detected Malaria using DNA extraction of blood samples and PCR amplification; optimized PCR primers.</li>
 												<li>Set black fly and mosquito traps to collect bug samples; identified Malaria parasites in blood smears
 												using microscopy.</li>
