--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 											<i>Sub-Antarctic Biocultural Conservation • Cape Horn Biosphere Reserve, Chile</i><br>
 											<ul>
 												<li>Inventoried the southernmost forests of the world to estimate tree biomass and quantify carbon storage using field data collection,
-													spatial modelling, and statistical analysis; estimated hours of fuel burning on the ground to determine fire hazards.</li>
+													spatial modelling, and statistical analysis; quantified coarse woody debris to estimate hours of fuel on the ground to determine fire hazards.</li>
 											</ul>
 											<ol>
 												<li>Collected GPS and open-sourced spatial data; measured tree DBH, height, and percent cover; identified tree species.</li>
