--- a/index.html
+++ b/index.html
@@ -436,16 +436,25 @@
 										<td><b>Global Corridor Efficacy Assessment</b> • <i><b><a href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i></b> (UNT)<br>
 											<i>Managua, Nicaragua</i><br>
 											<ul>
-												<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li>
-												<li>Assisted with training local collaborators in field data collection and protocols.</li>
-												<li>Mist netted, live handled and identified bats, collected morphometric data.</li>
+												<li>Actively assisted with training local collaborators in field data collection following project protocols.</li>
+											</ul>
+											<ol>
+												<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventories, and spatial modelling.</li>
 												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
-													collected tissue samples and morphometric data, assessed forests using Timber Cruise,
-													set acoustic monitors.</li>
-												<li>Established and maintained working relationships with partners in academia and local communities.</li>
+													collected ear tissue samples and morphometric data
+													(e.g., sex, weight, total length, hind foot length, tail length, ear size).
+												<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+												<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
+												<li>Set mist nets, identified bat species, and collected morphometric data
+													(e.g., sex, weight, total length, wing span).</li>
+											</ol>
+											<ul>
+												<li>Established and maintained strong working relationships with partners in academia and local communities.</li>
+											</ul>
+											<ol>
 												<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
 												<li>Met with local landowners with collaborators to discuss field sampling on private land.</li>
-											</ul>
+											</ol>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">August 2022</td>
 									</tr>
@@ -453,13 +462,20 @@
 										<td>
 											<i> Kakamega, Kenya</i><br>
 											<ul>
+												<li>Actively assisted with training local collaborators in field data collection following project protocols.</li>
+											</ul>
+											<ol>
+												<li>Collected GPS data, measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+												<li>Set acoustic monitors and camera traps.</li>
+											</ol>
+											<ul>
+												<li>Established and maintained strong working relationships with partners in private sectors and local communities.</li>
+											</ul>
+											<ol>
 												<li>Met with the director of a national government agency with collaborators to discuss permit acquisition
 													and contracts for field sampling.</li>
 												<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
-												<li>Assisted with training local collaborators in field data collection and protocols.</li>
-												<li>Collected GPS data, assessed forests using Timber Cruise, set acoustic monitors and camera traps.</li>
-												<li>Established and maintained working relationships with partners in private sectors and local communities.</li>
-											</ul>
+											</ol>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">May 2022</td>
 									</tr>
@@ -467,13 +483,20 @@
 										<td>
 											<i>Tarquinia, Italy</i><br>
 											<ul>
-												<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li>
+												<li>Actively conducted fieldwork and lab work with project manager and local collaborators.</li>
+											</ul>
+											<ol>
 												<li>Utilized mobile genetics lab to extract DNA from fecal and tissue samples.</li>
-												<li>Conducted field sampling with local collaborator to trap small mammals and collect covariate data.</li>
-												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals/avians,
-													collected tissue samples and morphometric data, assessed forests using Timber Cruise,
-													conducted walking scat survey, collected scat, set acoustic monitors.</li>
-												<li>Established and maintained working relationships with partners in academia and private sectors.</li>
+												<li>Conducted walking scat surveys to collect fecal samples for genetic analysis.</li>
+												<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventories, and spatial modelling.</li>
+												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
+													collected ear tissue samples and morphometric data
+													(e.g., sex, weight, total length, hind foot length, tail length, ear size).
+												<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+												<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
+											</ol>
+											<ul>
+												<li>Established and maintained strong working relationships with partners in academia and private sectors.</li>
 											</ul>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">March 2022</td>
@@ -483,37 +506,51 @@
 											<i>Kansas, United States</i><br>
 											<ul>
 												<li>Surveyed a Greater Prairie-chicken lek to assess courtship displays and breeding behaviors.</li>
-												<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li>
-												<li>Conducted field sampling with local collaborator to trap small mammals and collect covariate data.</li>
-												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
-													collected tissue samples and morphometric data, assessed forests using Timber Cruise, and
-													entered data in database.</li>
-												<li>Established and maintained a working relationship with local field technician. </li>
-
+												<li>Actively conducted fieldwork and lab work with project manager and local collaborators.</li>
 											</ul>
-												</td>
-													<td style="text-align: center; vertical-align: middle;">April 2022</td>
-											</tr>
-												<tr>
-													<td><b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
-														 <i>Denton Greenspaces • Denton, Texas</i>
-														<ul><li>Assisted with training new graduate student in field protocols | Small mammal trapping & covariate data.</li>
-															<li>GPS, Sherman transects, Timber Cruise. </li>
-													</ul></td>
-													<td style="text-align: center; vertical-align: middle;">July 2022</td>
-												</tr>
-											<tr>
-												<td>
-												<i>Quail Reintroduction at Lewisville Lake Environmental Learning Area • Denton, Texas</i>
-														<ul><li>Volunteered 30 hours to assist GRASE Lab PhD student with field data collection.</li>
-															<li>Telemetry, triangulation, quail mortality identification, Timber Cruise, data entry.</li>
-													</ul></td>
-													<td style="text-align: center; vertical-align: middle;">September 2021</td>
-											</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
+											<ol>
+												<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventories, and spatial modelling.</li>
+												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
+													collected ear tissue samples and morphometric data
+													(e.g., sex, weight, total length, hind foot length, tail length, ear size).
+												<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											</ol>
+											<ul>
+												<li>Established and maintained strong working relationships with the local field technician.</li>
+											</ul>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">April 2022</td>
+									</tr>
+									<tr>
+										<td><b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
+											<i>Denton Greenspaces • Denton, Texas</i>
+											<ul>
+												<li>Assisted with training of a new graduate student in field data collection following project protocols..</li>
+											</ul>
+											<ol>
+												<li>Collected GPS data and set Sherman transects for small mammal trapping.</li>
+												<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											</ol>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">July 2022</td>
+									</tr>
+									<tr>
+										<td>
+											<i>Quail Reintroduction at Lewisville Lake Environmental Learning Area • Denton, Texas</i>
+											<ul>
+												<li>Volunteered 30 hours to assist a colleague with field data collection.</li>
+											</ul>
+											<ol>
+												<li>Collected GPS data, telemetry, triangulation, and identified quail mortalities.</li>
+												<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											</ol>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">September 2021</td>
+									</tr>
+									</tfoot>
+								</table>
+							</div>
+						</section>
 
 							<!-- PUBLICATIONS -->
 								<section>
