--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
-							<p>GPS Data Collection, Timber Cruise,
+							<p>GPS, Timber Cruise,
 								Small Mammal Trapping and Handling, Mist Netting, Bird Handling,
 								Radio Telemetry, Acoustic Monitoring, Camera Trapping,
 								Remote Fieldwork, Integration with GIS</p>
