--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 						</dd>
 						<dt>Soft Skills</dt>
 						<dd>
-							<p>Adaptable, Attention to Detail, Collaboration, Communication,
-								Creative,Presentation Development, Project Management,
+							<p>Adaptability, Attention to Detail, Collaboration, Communication,
+								Creativity, Presentation Development, Project Management,
 								Troubleshooting, Time Management</p><br>
 						</dd>
 					</dl>
