--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 								</tr>
 								<td>
 									<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
-									<i>Tiger (<i>Panthera tigris</i>) endangerment: Positive responses to tiger conservation efforts</i>
+									<i>Tiger (<i>Panthera tigris</i>) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
 									<ul>
 										<li>Debugged scripts for statistical analyses; promptly shared with colleagues.</li>
 										<li>Produced a publishable unit (in progress) from an assignment in a graduate Conservation Biology course.</li>
@@ -324,7 +324,7 @@
 								</tr>
 								<tr>
 									<td>
-										<i>A Pythonic tool to locate high-priority conservation areas through mining BBS: Sage-grouse as an umbrella species</i><br>
+										<i>A Pythonic Tool to Locate High Priority Conservation Areas Through Mining BBS: Sage-grouse as an Umbrella Species</i><br>
 										<ul>
 											<li>Optimized >2,400 spatial data points; developed scripts for statistical analyses and uniform data visualization.</li>
 											<li>Managed a non-spatial database in a collaborative workspace environment.</li>
@@ -434,7 +434,7 @@
 									<td style="text-align: center; vertical-align: middle;">December 2022<br> - <br>January 2023</td>
 								</tr>
 								<tr>
-									<td><b>Global Corridor Efficacy Assessment</b> • <i><b><a href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i></b> (UNT)<br>
+									<td><b>Global Corridor Efficacy Project</b> • <i><b><a href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i></b> (UNT)<br>
 										<i>Managua, Nicaragua</i><br>
 										<ul>
 											<li>Actively assisted with training local collaborators in field data collection following project protocols.</li>
