--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
 									<i>Tiger (<i>Panthera tigris</i>) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
 									<ul>
 										<li>Debugged scripts for statistical analyses; promptly shared with colleagues.</li>
+										<li>Produced cartographic products following journal guidelines using ArcGIS.</li>
 										<li>Produced a publishable unit (in progress) from an assignment in a graduate Conservation Biology course.</li>
 										<li>Reviewed pertinent literature to collect species demographic data for statistical analyses.</li>
 										<li>Managed a non-spatial database in a collaborative workspace environment.</li>
@@ -328,6 +329,7 @@
 										<ul>
 											<li>Optimized >2,400 spatial data points; developed scripts for statistical analyses and uniform data visualization.</li>
 											<li>Managed a non-spatial database in a collaborative workspace environment.</li>
+											<li>Produced cartographic products following journal guidelines using ArcGIS.</li>
 											<li>Investigated the influence managed greater sage-grouse (GSG) areas has on metrics of avian diversity over time.</li>
 											<li>Helped land managers and conservationists better plan to protect GSG as an umbrella
 												species and manage healthy rangeland habitat to protect avian biodiversity long-term.</li>
