--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
 						</div>
 					</section>
 
-					<!-- RESEARCH EXPERIENCE -->
+					<!-- GIS EXPERIENCE -->
 					<section>
-						<h6>Research Experience</h6>
+						<h6>Applied Geospatial Experience</h6>
 						<div class="table-wrapper">
 							<table>
 								<col style="width:85%">
@@ -358,38 +358,14 @@
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2019<br> - <br>August 2020</td>
 								</tr>
-								</tr>
-								<td><b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
-									<i>Mice DNA Barcoding</i><br>
-									<ul>
-										<li>Designed and presented a poster at the MMC 3rd Annual Student Showcase.</li>
-									</ul>
-									<ol>
-										<li>Received Student Showcase Award.</li>
-									</ol>
-									<ul>
-										<li>Extracted mice tissue samples, PCR, and gel electrophoresis; sent samples out for sequencing.</li>
-										<li>Compared and aligned sequences among taxa; inferred evolutionary relationships.</li>
-										<li>Utilized DNA Subway, a bioinformatics pipeline, for DNA barcoding and phylogenetics.</li>
-									</ul>
-								</td>
-								<td style="text-align: center; vertical-align: middle;">April 2018</td>
-								<tr><td><i>The effect different concentrations of NaCl has on plant root peroxidase</i><br>
-									<ul><li>Extracted tissue samples, PCR, and gel electrophoresis, measured gene expression.</li>
-										<li>Planted seeds in a growth chamber to measure the effect various NaCl concentrations
-											has on plant roots.</li>
-									</ul></td>
-									<td style="text-align: center; vertical-align: middle;">December 2017</td>
-								</tr>
-								</tr>
 								</tfoot>
 							</table>
 						</div>
 					</section>
 
-					<!-- RESEARCH EXPERIENCE -->
+					<!-- FIELD AND LAB EXPERIENCE -->
 					<section>
-						<h6>Field Experience</h6>
+						<h6>Field & LabExperience</h6>
 						<div class="table-wrapper">
 							<table>
 								<col style="width:85%">
@@ -550,6 +526,30 @@
 									</td>
 									<td style="text-align: center; vertical-align: middle;">September 2021</td>
 								</tr>
+								<tr>
+								<td>
+									<b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
+									<i>Mice DNA Barcoding</i><br>
+									<ul>
+										<li>Designed and presented a poster at the MMC 3rd Annual Student Showcase.</li>
+									</ul>
+									<ol>
+										<li>Received Student Showcase Award.</li>
+									</ol>
+									<ul>
+										<li>Extracted mice tissue samples, PCR, and gel electrophoresis; sent samples out for sequencing.</li>
+										<li>Compared and aligned sequences among taxa; inferred evolutionary relationships.</li>
+										<li>Utilized DNA Subway, a bioinformatics pipeline, for DNA barcoding and phylogenetics.</li>
+									</ul>
+								</td>
+								<td style="text-align: center; vertical-align: middle;">April 2018</td>
+								<tr><td><i>The effect different concentrations of NaCl has on plant root peroxidase</i><br>
+									<ul><li>Extracted tissue samples, PCR, and gel electrophoresis, measured gene expression.</li>
+										<li>Planted seeds in a growth chamber to measure the effect various NaCl concentrations
+											has on plant roots.</li>
+									</ul></td>
+									<td style="text-align: center; vertical-align: middle;">December 2017</td>
+								</tr>								
 								</tfoot>
 							</table>
 						</div>
