--- a/index.html
+++ b/index.html
@@ -289,6 +289,14 @@
 										<ul>
 											<li>Collected, created, manipulated, and analyzed spatial data (vector and raster)
 												to produce cartographic and data products that improve land management decision-making.</li>
+											<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventories, and spatial modelling.</li>
+										</ul>
+										<ol>
+											<li>Implemented on-the-ground perspective with aerial perspectives using satellite imagery
+												in ArcGIS to conduct spatial analyses with a higher accuracy.</li>
+										</ol>
+										<ul>											
+										
 											<li>Consistently executed advanced spatial analyses to quantify landscape connectivity
 												across three study areas in Czechia, Idaho, and Kansas.</li>
 										</ul>
@@ -365,7 +373,7 @@
 
 					<!-- FIELD AND LAB EXPERIENCE -->
 					<section>
-						<h6>Field & LabExperience</h6>
+						<h6>Field & Lab Experience</h6>
 						<div class="table-wrapper">
 							<table>
 								<col style="width:85%">
