--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 									<td><b>Geographic Information Systems</b> (UNT)<br>
 										<dl>
 											<dd>
-												<p>Digital Image Analysis, LiDAR Data Analysis in GIS (*<i>audit</i>),
+												<p>Digital Image Analysis, LiDAR Data Analysis in GIS (<i>audit</i>),
 													Advanced GIS, Application Development with Python Programming,
 													Advanced GIS Programming</p>
 											</dd>
@@ -186,7 +186,7 @@
 								</thead>
 								<td>
 									<b>Research Assistant</b> (UNT)<br>
-									<i>Global Corridor Efficacy Project</i> • <i><a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i><br>
+									<i>Global Corridor Efficacy Project <font color="#afbcc0">•</font> <a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i><br>
 									<ul>
 										<li>Collected, created, manipulated, analyzed, and managed >2 TB of spatial data to support an international research collaboration.</li>
 										<li>Provided spatial modelling support for the project in conjunction with field data and genetic analysis.</li>
@@ -229,7 +229,7 @@
 								</tr>
 								<tr>
 									<td><b>Teaching Assistant</b> (UNT) <br>
-										<i>BIOL 1132 Environmental Science for Non-majors</i><br>
+										<i>BIOL 1132 <font color="#afbcc0">•</font> Environmental Science for Non-majors</i><br>
 										<ul>
 											<li>Promoted to lead TA in January 2022; aided in assessment and
 												recommendations to achieve course efficacy.
@@ -384,7 +384,7 @@
 								</thead>
 								<tr>
 									<td><b>National Science Foundation – International Research Experience for Students</b> (UNT) <br>
-										<i>Sub-Antarctic Biocultural Conservation • Cape Horn Biosphere Reserve, Chile</i>
+										<i>Sub-Antarctic Biocultural Conservation <font color="#afbcc0">•</font> Cape Horn Biosphere Reserve, Chile</i>
 										<br>
 										<ul>
 											<li>Inventoried the southernmost forests of the world to estimate tree biomass and quantify carbon storage using field data collection,
@@ -510,7 +510,7 @@
 								</tr>
 								<tr>
 									<td><b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
-										<i>Denton Greenspaces • Denton, Texas</i>
+										<i>Denton Greenspaces <font color="#afbcc0">•</font> Denton, Texas</i>
 										<ul>
 											<li>Assisted with training of a new graduate student in field data collection following project protocols..</li>
 										</ul>
@@ -523,7 +523,7 @@
 								</tr>
 								<tr>
 									<td>
-										<i>Quail Reintroduction at Lewisville Lake Environmental Learning Area • Denton, Texas</i>
+										<i>Quail Reintroduction at Lewisville Lake Environmental Learning Area <font color="#afbcc0">•</font> Denton, Texas</i>
 										<ul>
 											<li>Volunteered 30 hours to assist a colleague with field data collection.</li>
 										</ul>
@@ -537,7 +537,7 @@
 								<tr>
 								<td>
 									<b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
-									<i>Mice DNA Barcoding</i><br>
+									<i>Mice DNA Barcoding <font color="#afbcc0">•</font> Mount Pleasant, MI</i><br>
 									<ul>
 										<li>Designed and presented a poster at the MMC 3rd Annual Student Showcase.</li>
 									</ul>
@@ -551,7 +551,8 @@
 									</ul>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">April 2018</td>
-								<tr><td><i>The effect different concentrations of NaCl has on plant root peroxidase</i><br>
+								<tr><td><i>The Effect Various Concentrations of NaCl has on Plant Root Peroxidase 
+								<font color="#afbcc0">•</font> Mount Pleasant, MI</i><br>
 									<ul><li>Extracted tissue samples, PCR, and gel electrophoresis, measured gene expression.</li>
 										<li>Planted seeds in a growth chamber to measure the effect various NaCl concentrations
 											has on plant roots.</li>
@@ -575,7 +576,7 @@
 								</thead>
 								<tbody>
 								<td>
-									<p class="hangingindent">Baxter-Slye J with Contributions from <b>Long AM</b>, Kalta B (2022).
+									<p class="hangingindent">Baxter-Slye J with Contributions from <font color="#7e9094"><b>Long AM</b></font>, Kalta B (2022).
 										<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
 											Field & laboratory methods for environmental science for non-majors (2nd edition)</a>.
 										Department of Biological Sciences at University of North Texas. Kendall Hunt Publishing.</p>
@@ -600,14 +601,14 @@
 								<tr>
 									<td>
 										<b>MMC Third Annual Student Showcase</b> (MMC)<br>
-										<p class="hangingindent"><b>Long AM</b>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
-										<p class="indent">*Received Student Showcase Award</p>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
+										<p class="indent"><b>*</b>Received Student Showcase Award</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">April 2018</td>
 								</tr>
 								<tr>
 									<td><b>MMC Science Department</b> (MMC)<br>
-										<p class="hangingindent"><b>Long AM</b>, Lombard A, Wagner J. The effect different concentrations of NaCl has on plant root peroxidase.</p>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Wagner J. The effect different concentrations of NaCl has on plant root peroxidase.</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">April 2018</td>
 								</tr>
