--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
 										<li>Organized and prepared presentations to update project team; implemented feedback to meet multi-user objectives.</li>
 										<li>Designed a workflow for project collaborators to implement spatial processing across 11+ landscapes, internationally.</li>
 										<li>Maintained responsibility for administrating geospatial lab computers to facilitate program use.</li>
-										<li>Actively trained colleagues on conducting advanced spatial analyses and geodatabase management.</li>
+										<li>Actively trained colleagues on conducting advanced spatial analyses for their specific project objectives,
+											troubleshooting, and geodatabase management.</li>
 										<li>Worked closely with the project manager, field technicians, and partners in private sectors and academia.</li>
 									</ul>
 									<ol>
@@ -206,7 +207,7 @@
 										<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
 									</ol>
 									<ul>
-										<li>Assisted with the international transportation of field and lab equipment, implementation of field sampling, and training collaborators in field protocols.</li>
+										<li>Assisted with the international transportation of field and lab equipment, implementing field sampling, and training collaborators in field protocols.</li>
 									</ul>
 									<ol>
 										<li>Scouted landscapes to identify areas suitable for field data collection and spatial modelling as per project requirements.</li>
