--- a/index.html
+++ b/index.html
@@ -223,8 +223,12 @@
 												for conservation objectives.
 										</ul>
 										<ol>
-											<li>Thoroughly maintained record of methodological approaches and troubleshooting.</li>
+											<li>Thoroughly maintained records of methodological approaches and troubleshooting.</li>
 										</ol>
+										<ul>
+											<li>Gathered, created, analyzed, organized, and presented geospatial data for the international project team.</li>
+											<li>Provided spatial modelling support for the project in conjunction with field data and genetic analysis.</li>
+										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">July 2021<br> - <br>August 2021</td>
 								</tr>
@@ -244,14 +248,14 @@
 													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
 										</ol>
 										<ul>
-											<li>Supervised environmental sampling methods in a lab/field setting for 11 course sections with ~24 students.</li>
+											<li>Supervised environmental sampling methods in a lab/field setting for 11-course sections with ~24 students.</li>
 										</ul>
 										<ol>
 											<li>Tested water quality to compare dissolved oxygen content, contaminant levels,
 												and pH between municipal and pond water samples.</li>
 											<li>Planted native plants and seeds across 4 acres of a restored native tallgrass prairie to
 												promote pollinator habitats, outdoor recreation, and land restoration.</li>
-											<li>Tested soil samples to compare nutrient levels, pH, soil structure/texture to compare soil health between agricultural and native prairie samples; promoted native plants, pollinator habitats,
+											<li>Tested soil samples to compare nutrient levels, pH, and soil structure/texture to compare soil health between agricultural and native prairie samples; promoted native plants, pollinator habitats,
 												sustainable agriculture, and land restoration.</li>
 											<li>Measured dissolved oxygen content in freshwater samples with varying levels of fertilizer and temperature to promote sustainable agriculture.</li>
 											<li>Identified/collected benthic macroinvertebrates and used biomonitors to assess freshwater health in local streams.</li>
